--- a/docs/thesis.tex
+++ b/docs/thesis.tex
@@ -161,7 +161,7 @@
 
 \title{Genome folding in evolution and disease}
 \author{Jonas Ibn-Salem}
-\date{2018-02-17}
+\date{2018-02-18}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -265,12 +265,11 @@ will be increasingly important to take the three-dimensional genome
 structure into account, not only in genomic research but also in
 clinical practice.
 
-\hypertarget{thesis-intro}{%
-\chapter{Introduction}\label{thesis-intro}}
+\hypertarget{intro}{%
+\chapter{Introduction}\label{intro}}
 
-\hypertarget{regulation-of-gene-expression}{%
-\section{Regulation of gene
-expression}\label{regulation-of-gene-expression}}
+\hypertarget{regulation-of-expression}{%
+\section{Regulation of gene expression}\label{regulation-of-expression}}
 
 Each cell in our body originate from the same fertilized stem cell and
 has therefore virtually the same genome. However, different cell types
@@ -5104,53 +5103,32 @@ anchors.
 \hypertarget{thesis-discussion}{%
 \chapter{Discussion}\label{thesis-discussion}}
 
-\begin{itemize}
-\tightlist
-\item
-  Notes
+Recent developments in proximity-ligation methods allow measuring
+pairwise chromatin interactions genome-wide. Resulting interaction maps
+revealed a hierarchical organization of genome folding with the
+intrinsic property of interphase chromosomes to fold into frequently
+interacting domains, called TADs. This non-random organization lead to
+many fundamental questions of how genome folding contributes to
+functional segregation in genomes and how domain organization ensures
+precise regulation of gene expression (see chapter
+\protect\hyperlink{intro}{1}).
 
-  \begin{itemize}
-  \tightlist
-  \item
-    evtl devide discussion of paralogs into two part,
+Chromatin interaction data can be integrated computationally with
+one-dimensional measurements along the genome. This allows annotating
+folding structures with diverse functional data such as epigenetic
+marks, protein binding signals, tissue-specific gene expression, or
+sequence conservation across genomes. Work in this thesis applied such
+approaches to analyze the functions of TADs for gene regulation in the
+contexts of evolution and diseases. The results highlight the role of
+TADs as regulatory environments for gene expression, their stability
+during hundreds of millions of years of evolution and disruptions by
+disease-associated genetic variants. Furthermore, recent insights into
+molecular mechanisms of chromatin loop formation are used to predict
+long-range interactions genome-wide from protein binding data.
 
-    \begin{itemize}
-    \tightlist
-    \item
-      the regualtlinl and TAD association
-    \item
-      and new gene creation
-    \end{itemize}
-  \end{itemize}
-\end{itemize}
-
-\hypertarget{introduction-to-discussion}{%
-\section{(Introduction to
-discussion)}\label{introduction-to-discussion}}
-
-\begin{itemize}
-\tightlist
-\item
-  summarize current knowledge of genome folding and gene-regulation
-  (from the introduction)
-\item
-  This leads to many fundamental questions of how genome folding
-  contributes to the functional organization of genomes regarding gene
-  regulation.
-\item
-  This data can be computationally integrated with one-dimensional
-  measurements along the genome and lead to exciting findings of a
-  higher-order organization.
-\item
-  In this thesis, I analysed the functions of TADs for gene regulation
-  and highlight their stability in evolution as well as their
-  consideration when analyzing genomic variations in patient genomes.
-\item
-  Summarize main findings from chapters 2-5
-\item
-  In this section the results of this theses from chapters are discussed
-  and related to the most recent literature.
-\end{itemize}
+This section discusses the results of chapters \ref{paralog-regulation},
+\ref{TAD-evolution}, \ref{position-effect}, and \ref{loop} in light of
+the most recent literature and suggest further research perspectives.
 
 \hypertarget{limitation-of-the-analysis}{%
 \subsection{Limitation of the
@@ -5211,6 +5189,27 @@ enhancers per gene, and the distance of enhancers to genes. This
 sampling approach allowed us to compare properties of paralog gene pairs
 to background distribution that model expectations by chance.
 
+\begin{figure}
+
+{\centering \includegraphics[width=0.8\linewidth]{figures/Dixon2016_Fig3ab} 
+
+}
+
+\caption{\textbf{Co-regualtion by shared enhancers in TADs.}
+\textbf{(A)} Example diagram showing the co-regulation of multiple genes
+by a single regulatory element within a TAD. \textbf{(B)} Diagram of the
+potential for TAD boundaries to serve an enhancer blocking role that
+restricts enhancers to target genes within the same TAD. Figure adapted
+from \citep{Dixon2016}.}\label{fig:CoRegTAD}
+\end{figure}
+
+
+
+
+
+
+
+
 Our analysis shows that paralogs are significantly enriched in TADs,
 frequently share the same regulatory enhancer and have increased Hi-C
 contacts, even when they are more than 1 Mb apart in the linear genome.
@@ -5226,18 +5225,19 @@ organization from independent sources. A large fraction of expression
 can be attributed to the positioning of genes in genome architecture and
 highly informative for TAD activity and organization \citep{Rennie2018}.
 
-\hypertarget{creation-of-new-genes-in-shared-regulatory-environments}{%
-\section{Creation of new genes in shared regulatory
-environments}\label{creation-of-new-genes-in-shared-regulatory-environments}}
+\hypertarget{evolutionary-novelties-by-gene-duplications-and-altered-regulatory-environments}{%
+\section{Evolutionary novelties by gene duplications and altered
+regulatory
+environments}\label{evolutionary-novelties-by-gene-duplications-and-altered-regulatory-environments}}
 
-However, the analysis of paralogs with respect to three-dimensional
-genome folding allows further conclusions about the evolutionary history
-of genes and how new functionality by novel genes is most efficient
-created during evolution. Loss-of-function mutations degrade most young
-duplicated genes into pseudogenes \citep{Lynch2003}. These observations
-raise the question of which mechanisms led to the survival and
-expression of the many paralog genes. Some models explain paralog genes
-by sub- or neo-functionalization or sharing of gene dosage
+However, the analysis of paralog regulation with respect to
+three-dimensional genome folding allows further conclusions about the
+evolutionary history of genes and how new functionality by novel genes
+is most efficient created during evolution. Loss-of-function mutations
+degrade most young duplicated genes into pseudogenes \citep{Lynch2003}.
+These observations raise the question of which mechanisms led to the
+survival and expression of the many paralog genes. Some models explain
+paralog genes by sub- or neo-functionalization or sharing of gene dosage
 \citep{Lan2016}. Our observation of co-regulated paralogs in the
 regulatory environments of TADs is consistent with a very recent
 analysis of expression pattern between young and old paralogs
@@ -5308,11 +5308,32 @@ acquisition of transcription factor binding and subsequent novel
 regulatory functions \citep{Long2016}. Similarly, deletion or
 duplication of TAD boundaries could change the folding structure of
 genomic regions and enable regulatory contacts with previously insulated
-regulatory elements \citep{Franke2017}. However, our data suggest that
-TADs act as protective nests for evolving newcomer genes. This seems to
-be a reasonable evolutionary mechanism, much more straightforward than
+regulatory elements \citep{Ibn-Salem2014, Lupianez2015, Franke2017}. In
+agreement with these mechanisms observed in genetic diseases, we find
+that evolutionary rearrangements disrupting TADs are associated with
+divergent gene expression patterns between mouse and human. These
+findings indicate an evolutionary mechanism by which structural
+variations lead to altered domain organization with associated
+expression changes which might enable novel functions and morphologies.
+One example of altered physiological morphologies upon structural
+variations is the Liebenberg Syndrom that is characterized by
+malformation of upper limbs, showing the characteristic bone morphology
+of hind-limbs \citep{Spielmann2012}. This syndrome is caused by
+deletions or translocations that disrupt a TAD boundary element which
+exposes the \textbf{PITX1} gene to the activation by an enhancer with
+specific lower-limb activity \citep{Spielmann2013a}. This example and
+other phenotypes caused by TAD disruptions
+\citep{Lupianez2015, Franke2016} show that altered genome folding upon
+TAD disruption can lead to morphological novelties.
+
+Together, our data suggest that TADs act as protective nests for
+evolving newcomer genes. Duplicating genes within TADs seems to be a
+reasonable evolutionary mechanism, much more straightforward than
 creating from nothing an entirely new regulatory environment for a new
-gene.
+gene. Genetic variations that alter genome folding and expose genes to
+new regulatory environments can then create new functions of the gene by
+expression in different contexts leading to physiological or
+morphological novelties.
 
 \hypertarget{tads-are-stable-across-large-evolutionary-time-scales}{%
 \section{TADs are stable across large evolutionary
@@ -5327,43 +5348,49 @@ or within TAD regions. Furthermore, we hypothesized that disruption of
 TADs during evolution might be associated with changes in gene
 expression programs between the species.
 
-\begin{itemize}
-\tightlist
-\item
-  Discussion on findings
+We find evolutionary rearrangements between distal vertebrate species
+highly enriched at TAD boundaries and depleted within TADs (Chapter
+\ref{TAD-evolution}). This is consistent with recent findings of
+enriched non-coding sequence conservation in TADs
+\citep{Harmston2017, Polychronopoulos2017}. Furthermore, these results
+are consistent with a very recent study investigating the requirement of
+the ultra-conserved non-coding regions containing enhancers by knock-out
+experiments in mice \citep{Dickel2018}. Knock-out mice that lack
+individual or combination of enhancers were viable but showed strong
+neurological phenotypes. These effects indicate that the remarkably
+strong sequence conservation likely results from fitness deficit that
+appear subtle in a laboratory setting \citep{Dickel2018}. This effect
+could be similar for targeted deletions of conserved TAD boundaries.
 
-  \begin{itemize}
-  \tightlist
-  \item
-    Relate to GRBs and CNE clusters
-    \citep{Harmston2017, Polychronopoulos2017}
-  \item
-    Follow up studies might experimentally support the functional
-    importance of TADs that are evolutionary conserved.
-  \end{itemize}
-\end{itemize}
+Interestingly, genetic variation data across human populations revealed
+that loci in the same TAD have a reduced recombination rate
+\citep{Liu2016b}. Consistent with this finding, the linkage
+disequilibrium (LD), which measures co-transmission of genetic variants
+in populations, correlates with Hi-C interaction frequencies
+\citep{Gerber2018}. This association indicates functional interactions
+between alleles in regulatory domains \citep{Liu2016b}.
 
-Interestingly, also regions in the same TAD have a reduced recombination
-rate, indicating functional interactions between alleles in such
-regulatory domains \citep{Liu2016b}. The relation of variant
-co-transmission in population, in general, measured as linkage
-disequilibrium (LD) correlates with Hi-C interaction frequencies
-\citep{Gerber2018}.
+We observed enrichment for expression conservation for genes in TADs and
+even stronger for genes in conserved TADs. This is somewhat consistent
+with a very recent study, analyzing promoter and enhancer activity in
+liver samples from 15 species \citep{Berthelot2017}. In this study gene
+expression conservation could best be explained by the number and
+conservation of surrounding enhancers and promoters.
 
-A very recent study investigated the requirement of the ultra-conserved
-non-coding region containing enhancers by knock-out experiments in mice
-\citep{Dickel2018}. Knock-out mice that lack individual or combination
-of enhancers were viable but showed strong neurological phenotypes.
-These effects indicate that the remarkably strong sequence conservation
-likely results from fitness deficit that appear subtle in a laboratory
-setting \citep{Dickel2018}. This effect could be similar for targeted
-deletions of conserved TAD boundaries.
+These results, together with the strong non-coding conservation in TADs
+\citep{Harmston2017}, and our finding of reduced rearrangements of TADs
+and association to conserved gene expression indicates, that selective
+pressure acts on the integrity of TADs.
 
-The increased expression conservation of genes within TADs is somewhat
-consistent with a very recent study, analyzing promoter and enhancer
-activity in liver samples from 15 species \citep{Berthelot2017}. In this
-study gene expression conservation could best be explained by the number
-and conservation of surrounding enhancers and promoters.
+While miss-regulation upon TAD disruption might be beneficial for an
+organism and allow evolutionary leaps (as discussed above), in most
+cases TAD disruptions might be detrimental for an organism, as can be
+seen in genetic diseases and cancers (as discussed below).
+
+\hypertarget{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}{%
+\section{The genome folding structure explains pathomechanism of
+structural
+variants}\label{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}}
 
 The analysis of genomic rearrangements between human and other species
 during evolution lead to the conclusion that TADs are essential
@@ -5376,11 +5403,6 @@ the depletion of evolutionary rearrangements in TADs and the expression
 change associated with TAD disruption to be a consequence of selective
 pressure on TAD structure. Therefore selective pressure is likely to act
 on TAD structures.
-
-\hypertarget{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}{%
-\section{The genome folding structure explains pathomechanism of
-structural
-variants}\label{the-genome-folding-structure-explains-pathomechanism-of-structural-variants}}
 
 \begin{itemize}
 \tightlist
